added refreshToken API and modified CORS policy
